Added dummy Test and changed .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-.idea
+### Gradle ###
+backend/.gradle
+backend/build/
+
+### Intellij ###
+backend/out/
+backend/.idea/
+
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
