--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Build and Push Image to GitHub Packages
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          file: backend/Dockerfile
+          file: ./backend/Dockerfile
           repository: cedric-gasser/fanicon/fanicon-backend
           tag_with_ref: true
 
@@ -58,11 +58,11 @@ jobs:
       - name: navigate to frontend folder
         run: cd frontend
       - name: Build and Push Image to GitHub Packages
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          file: frontend/Dockerfile
+          file: ./frontend/Dockerfile
           repository: cedric-gasser/fanicon/fanicon-frontend
           tag_with_ref: true
