--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Build files
+        run: |
+          cd backend
+          ./gradlew bootJar
       - name: Build and Push Image to GitHub Packages
         uses: docker/build-push-action@v2
         with:
