--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,12 +40,12 @@ jobs:
           cd backend
           ./gradlew bootJar
       - name: Build and Push Image to GitHub Packages
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v1
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          file: ./backend/Dockerfile
+          dockerfile: ./backend/Dockerfile
           repository: cedric-gasser/fanicon/fanicon-backend
           tag_with_ref: true
 
@@ -62,11 +62,11 @@ jobs:
       - name: navigate to frontend folder
         run: cd frontend
       - name: Build and Push Image to GitHub Packages
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v1
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          file: ./frontend/Dockerfile
+          dockerfile: ./frontend/Dockerfile
           repository: cedric-gasser/fanicon/fanicon-frontend
           tag_with_ref: true
