Add icon and theme model

--- a/backend/src/main/resources/test.properties
+++ b/backend/src/main/resources/test.properties
@@ -1,3 +1,4 @@
+# Database
 spring.jpa.hibernate.ddl-auto=create-drop
-# Deactivate migration tools for testing
+# Deactivate liquibase for testing
 spring.liquibase.enabled=false
