--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,5 +5,12 @@ spring.datasource.password=secret
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+# Cache
+spring.redis.host=${REDIS:redis}
+spring.redis.port=6379
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=600000
+spring.cache.redis.use-key-prefix=true
+spring.cache.type=redis
 # Flyway
 spring.flyway.enabled=false
