--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,7 @@
 version: "3.9"
 services:
-  frontend:
-    build: ./frontend/
-    ports:
-      - 80:80
-      - 443:443
-
   backend:
+    container_name: fanicon-backend
     build: ./backend/
     networks:
       - fanicon
@@ -14,6 +9,21 @@ services:
       - DATASOURCE=postgres
       - REDIS=redis
       - ENABLE_FLYWAY=true
+    depends_on:
+      - postgres
+    ports:
+      - 8080:8080
+
+  frontend:
+    container_name: fanicon-frontend
+    build: ./frontend/
+    ports:
+      - 80:80
+      - 443:443
+    depends_on: 
+      - backend
+    networks:
+      - fanicon
 
   postgres:
     container_name: postgres
@@ -33,16 +43,16 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4:5.2
     environment:
-        - PGADMIN_DEFAULT_EMAIL=admin@admin.ch
-        - PGADMIN_DEFAULT_PASSWORD=secret
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.ch
+      - PGADMIN_DEFAULT_PASSWORD=secret
     ports:
-        - 5050:80
+      - 5050:80
     networks:
-        - fanicon
+      - fanicon
     volumes:
-        - pgadmin-data:/root/.pgadmin
+      - pgadmin-data:/root/.pgadmin
     depends_on:
-        - postgres
+      - postgres
 
   redis:
     container_name: redis
