--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx
-COPY ./html /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY ./html/ /etc/nginx/html/
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
