--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -1,19 +1,11 @@
 server { 
- listen 443;
- location / {
-   # This would be the directory where your React app's static files are stored at
-   root /usr/share/nginx/html;
-   try_files $uri /index.html;
- }
- 
- location /api {
-   proxy_set_header X-Real-IP $remote_addr;
-   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-   proxy_set_header X-NginX-Proxy true;
-   proxy_pass http://fanicon-backend:8080/;
-   proxy_ssl_session_reuse off;
-   proxy_set_header Host $http_host;
-   proxy_cache_bypass $http_upgrade;
-   proxy_redirect off;
- }
+    listen 80;
+    listen 443;
+
+    location /api {
+        rewrite /api/(.*) /$1  break;
+        proxy_pass http://fanicon-backend:8080;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+    }
 }
