--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 # Cache
-spring.redis.host=${REDIS:redis}
+spring.redis.host=${REDIS:localhost}
 spring.redis.port=6379
 spring.cache.redis.cache-null-values=false
 spring.cache.redis.time-to-live=600000
