--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./html/ /etc/nginx/html/
+COPY ./html /etc/nginx/html
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
