--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,27 @@
 version: "3.9"
 services:
-  backend:
-    container_name: fanicon-backend
-    build: ./backend/
-    networks:
-      - fanicon
-    environment:
-      - DATASOURCE=postgres
-      - REDIS=redis
-      - ENABLE_FLYWAY=true
-    depends_on:
-      - postgres
-    ports:
-      - 8080:8080
+  # backend:
+  #   container_name: fanicon-backend
+  #   build: ./backend/
+  #   networks:
+  #     - fanicon
+  #   environment:
+  #     - DATASOURCE=postgres
+  #     - ENABLE_FLYWAY=true
+  #   depends_on:
+  #     - postgres
+  #   ports:
+  #     - 8080:8080
 
   frontend:
-    container_name: fanicon-frontend
+    # container_name: fanicon-frontend
     build: ./frontend/
-    ports:
-      - 80:80
-      - 443:443
-    depends_on: 
-      - backend
-    networks:
-      - fanicon
+    # ports:
+    #   - 80:80
+    #   - 443:443
+    # depends_on: 
+    #   - backend
+    network_mode: host
     volumes:
       - type: bind
         source: ./frontend/html
@@ -31,51 +29,34 @@ services:
         consistency: consistent
 
   postgres:
-    container_name: postgres
+    # container_name: postgres
     image: postgres:13-alpine
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=secret
       - POSTGRES_DB=fanicon
-    ports:
-      - 5432:5432
-    networks:
-      - fanicon
+    # ports:
+    #   - 5432:5432
+    network_mode: host
     volumes:
       - postgres-db:/var/lib/postgresql/data
 
   pgadmin:
-    container_name: pgadmin
+    # container_name: pgadmin
     image: dpage/pgadmin4:5.2
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.ch
       - PGADMIN_DEFAULT_PASSWORD=secret
-    ports:
-      - 5050:80
-    networks:
-      - fanicon
+    # ports:
+    #   - 5050:5050
+    network_mode: host
     volumes:
       - pgadmin-data:/root/.pgadmin
     depends_on:
       - postgres
 
-  redis:
-    container_name: redis
-    image: redis:6-alpine
-    ports:
-      - 6379:6379
-    networks:
-      - fanicon
-    volumes:
-      - redis-data:/data
-
-
-networks:
-  fanicon:
-    driver: bridge
 
 volumes:
   postgres-db:
   pgadmin-data:
-  redis-data:
         
