--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     location /api {
         rewrite /api/(.*) /$1  break;
-        proxy_pass http://localhost:8080;
+        proxy_pass http://fanicon-backend:8080;
         proxy_redirect off;
         proxy_set_header Host $host;
     }
